# camera-intrinsic-model-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: bench.rs  opencv_test.py
data/: eucm0.json  eucm1.json  fov_tum_mono.json
examples/: project_points.rs  remap.rs  stereo_rectify.rs
src/: generic.rs  generic_functions.rs  generic_model.rs  io.rs  lib.rs
src/models/: double_sphere.rs  eucm.rs  eucmt.rs  fov_camera.rs  ftheta.rs  kb4.rs  mod.rs  opencv5.rs  ucm.rs
tests/: verify_fast_remap.rs
