[package]
name = "camera-intrinsic-model"
version = "0.7.2"
edition = "2024"
authors = ["Powei Lin <poweilin1994@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
description = "Camera Intrinsic Models"
homepage = "https://github.com/powei-lin/camera-intrinsic-model-rs"
repository = "https://github.com/powei-lin/camera-intrinsic-model-rs"
keywords = ["camera-intrinsic", "intrinsic", "fisheye"]
categories = ["data-structures", "science", "mathematics", "science::robotics"]
exclude = [
    "/.github/*",
    "*.ipynb",
    "./scripts/*",
    "examples/*",
    "tests/*",
    "data/*",
    "benches/*",
]

[dependencies]
image = { version = "0.25.9", default-features = false, features = ["rayon"] }
nalgebra = "0.34.1"
rayon = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[example]]
name = "remap"

[[example]]
name = "stereo_rectify"

[[example]]
name = "project_points"

[[bench]]
name = "bench"
harness = false

[dev-dependencies]
diol = "0.13.1"
imageproc = "0.25.0"
rand = "0.9"
